--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "gulp-uglify": "^1.1.0",
     "gulp-useref": "^3.0.0",
     "main-bower-files": "^2.5.0",
-    "wiredep": "^2.2.2"
+    "wiredep": "^2.2.2",
+    "gulp-jasmine-browser": "^0.2.3",
+    "phantomjs": "^1.9.19"
   },
   "eslintConfig": {
     "env": {
