swap jasmine for mocha runner

--- a/client/package.json
+++ b/client/package.json
@@ -22,8 +22,7 @@
     "gulp-useref": "^3.0.0",
     "main-bower-files": "^2.5.0",
     "wiredep": "^2.2.2",
-    "gulp-jasmine-browser": "^0.2.3",
-    "phantomjs": "^1.9.19",
+    "gulp-mocha-phantomjs": "^0.10.1",
     "proxy-middleware": "^0.15.0"
   },
   "eslintConfig": {
