--- a/client/bower.json
+++ b/client/bower.json
@@ -17,6 +17,10 @@
   },
   "devDependencies": {
     "chai": "~3.4.2",
-    "mocha": "~2.3.4"
+    "mocha": "~2.3.4",
+    "sinon": "~1.17.3"
+  },
+  "resolutions": {
+    "sinon": "~1.17.3"
   }
 }
