--- a/client/bower.json
+++ b/client/bower.json
@@ -5,8 +5,7 @@
     "bootstrap": "~3.3.5",
     "modernizr": "~2.8.1",
     "masonry": "^4.1.0",
-    "imagesloaded": "^4.1.0",
-    "msr": "^1.3.4"
+    "imagesloaded": "^4.1.0"
   },
   "overrides": {
     "masonry": {
